# stackmate-core

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  cbindgen.toml  libstackmate-29691-4158403038813190863_0.profraw  libstackmate-29691-6808352451392244777_0.profraw  libstackmate-30353-4158403038813190863_0.profraw  libstackmate-30353-6808352451392244777_0.profraw  libstackmate-31295-4158403038813190863_0.profraw  libstackmate-31295-6808352451392244777_0.profraw  libstackmate-31958.profraw  libstackmate-34159.profraw  libstackmate-35279.profraw  libstackmate-36253.profraw  makefile
.github/workflows/: test.yml
builds/aarch64-linux-android/release/: libstackmate.d
docs/: api.md  build01.md  m1.md
fuzz/: Cargo.toml
resources/: Dockerfile  build.sh  import.sh  init.sh  release.sh
resources/docs/: api.md  build01.md  debcross.md
scripts/: build.sh  import.sh  init.sh  osxcross.sh  release.sh
src/: config.rs  e.rs  lib.rs
src/bip392/: README.md  mod.rs
src/key/: aes.rs  child.rs  derivation.rs  ec.rs  encoding.rs  encryption.rs  master.rs  mod.rs  schnorr.rs  seed.rs
src/network/: exchange.rs  fees.rs  height.rs  mod.rs  tor.rs
src/util/: aes.rs
src/wallet/: address.rs  coldcard.rs  custom.rs  history.rs  mod.rs  policy.rs  proof_of_payment.rs  psbt.rs  recover.rs  sync.rs  utxo.rs
tests/: complete.sh  test.sh
