[package]
authors = ["i5hi, mocodesmo"]
description = "Rust-C FFI exposing composite functionality to build bitcoin descriptor wallets."
edition = "2018"
keywords = ["bitcoin", "rust-c-ffi"]
license = "MIT"
name = "stackmate"
version = "0.8.3"

[dependencies]
base32 = "0.4.0"
base64 = "0.13.0"
bip39 = "1.0.1"
hex = "0.4.3"
serde = "1.0.126"
serde_derive = "1.0.0"
serde_json = "1.0.64"
sha-1 = "0.10.0"
chacha20poly1305 = { version = "0.9.0", features = ["stream"] }
# libtor = "46.5.0+0.4.6.5"

[dependencies.secp256k1]
features = ["rand", "bitcoin_hashes", "global-context", "rand-std"]
version = "0.22.0"

[dependencies.bitcoin]
features = ["rand", "base64"]
version = "0.27.0"

[dependencies.bdk]
features = ["compiler", "rpc", "electrum", "sqlite"]
version = "0.18.0"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "stackmate"

[release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"

# [target.aarch64-linux-android.dependencies] 
#  openssl-sys = { version = "*", features = ["vendored"] }

# [target.i686-linux-android.dependencies] 
# openssl-sys = { version = "*", features = ["vendored"] }

# [target.x84_64-linux-android.dependencies] 
# openssl-sys = { version = "*", features = ["vendored"] }

[build]
profiler = true
