[package]
authors = ["i5hi, mocodesmo"]
description = "Rust-C FFI exposing composite functionality to build bitcoin descriptor wallets."
edition = "2018"
keywords = ["bitcoin", "rust-c-ffi"]
license = "MIT"
name = "stackmate"
version = "0.12.2"

[dependencies]
base32 = "0.4.0"
base64 = "0.13.0"
bdk = {version = "0.20.0", features = ["compiler", "rpc", "electrum", "sqlite"]}
bip39 = "1.0.1"
bitcoin = {version = "0.28.1", features = ["rand", "base64"]}
chacha20poly1305 = {version = "0.9.0", features = ["stream"]}
hex = "0.4.3"
rusqlite = {version= "0.27.0", features=["bundled"]}
secp256k1 = {version = "0.22.0", features = ["rand", "bitcoin_hashes", "global-context", "rand-std"]}
serde = "1.0.126"
serde_derive = "1.0.0"
serde_json = "1.0.64"
sha-1 = "0.10.0"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "stackmate"

[release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"

[build]
profiler = true
